# archpower-ps3-linux

./: .brave_api_key  .gitignore  Dockerfile.earnapp  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md  add_acurast.py  add_aro.py  add_duco_back.py  add_gradient_kai.py  add_nano.py  add_new_projects.py  add_refs.py  add_ur.py  build_firmware.sh  build_new_hub.py  build_ps3_ffmpeg.sh  build_s2.sh  create_remotion.js  deduplicate.js  deduplicate2.js  earnapp_install.sh  fix.sh  fix2.sh  fix3.sh  fix_dupes.py  fix_featured.py  fix_guide.py  fix_sync.py  generate_dummy_certs.sh  github-token.config  github.config  insert-rows.js  insert_nodes.py  moltbook.config  openclaw.json  package.json  parse_and_rebuild.js  (+44 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
depin-hub/: hardware-projects.html  index.html  shorten.js
depin-hub/guides/: aioz-network.md  dawn.md  (+18 more)
jordan-homepage/: index.html
libps3rp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  jni.h
libps3rp/include/: av_decoder.h  ps3rp.h
libps3rp/src/: auth_crypto_isolated.cpp  av_decoder.cpp  ps3rp.cpp  ps3rp_jni.cpp  stream_crypto.cpp  test_client.cpp
memory/: 2026-03-01.md  2026-03-05.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-20.md  2026-03-28.md  2026-03-29.md  2026-04-01.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  heartbeat-state.json
my-landing-page/: index.html
ps3-cell-media/: Makefile  package.conf
ps3-cell-media-new/: ARCHITECTURE.md  Makefile  build.sh  install_deps.sh  pkg.py
ps3-gaming-os/: build_recipe.sh
ps3-homebrew-revival/: PLAN.md  README.md
ps3-os-build/: build_archpower.sh  make_bootable_usb.sh
ps3-remote-play/: PLAN.md  PROTOCOL.md  auth_crypto_isolated.cpp  stream_crypto.cpp
ps3-xnu-darwin/: ARCHITECTURE.md  Makefile  linker.ld
py2/: libpython2.7-minimal_2.7.18~rc1-2_amd64.deb  libpython2.7-stdlib_2.7.18~rc1-2_amd64.deb  python2.7-minimal_2.7.18~rc1-2_amd64.deb  python2.7_2.7.18~rc1-2_amd64.deb
scripts/: nightly_memory_cron.sh
(+200 files in other folders)
